--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.17",
+        "guzzlehttp/guzzle": "^7.8",
         "kreait/firebase-php": "^7.13",
         "kreait/laravel-firebase": "^5.9",
+        "laravel-notification-channels/fcm": "^4.3",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
